bridge/base/0-closeshave-1-namespace.yaml
#! 0-closeshave-1-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: closeshave-1
    labels:
        com.docker.compose.project: closeshave-1
