bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: closeshave-1
    labels:
        com.docker.compose.project: closeshave-1
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: closeshave-1
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: closeshave-1
                com.docker.compose.service: frontend
                com.docker.compose.network.closeshave-network: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: closeshave-frontend
                  image: closeshave-1-frontend
                  imagePullPolicy: IfNotPresent
                  livenessProbe:
                    exec:
                        command: ['wget --quiet --tries=1 --spider http://localhost/health']
                    periodSeconds: 30
                    initialDelaySeconds: 5
                    timeoutSeconds: 3
                    failureThreshold: 3
                  ports:
                    - name: frontend-5173
                      containerPort: 5173
                    - name: frontend-80
                      containerPort: 80
